--- a/proto.html
+++ b/proto.html
@@ -124,7 +124,7 @@
             <li>Dedicated account manager</li>
           </ul>
           <div class="price">$97,999</div>
-          <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Get Started</a>
+          <a href="/card.html" class="btn-outline">Get Started</a>
         </div>
       </div>
     </div>
@@ -147,4 +147,5 @@
   </footer>
   <script src="Js/main.js"></script>
 </body>
+
 </html>
