--- a/proto.html
+++ b/proto.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="Style.css">
-  <title>Crypto Currency Mining</title>
+  <title>Resource Exploration Prospectivity</title>
 </head>
 <body>
   <header>
     <div class="container">
       <nav>
         <div class="logo">
-          <img src="/cropped_circle_image1.png" alt="Logo" />
-          ADA Mining
+          <img src="/WhatsApp Image 2025-10-25 at 15.20.38.jpg" alt="Logo" />
+          Ore Scout
         </div>
         <ul>
           <li><a href="#">Home</a></li>
@@ -20,34 +19,30 @@
           <li><a href="#">Packages</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <a href="/getstarted.html" class="btn-primary">Get Started</a>
+        <a href="http://10.70.223.190:8501" class="btn-primary">Get Started</a>
       </nav>
     </div>
   </header>
 
   <section class="hero">
-  <h1>Crypto Currency Mining</h1>
-  <iframe src="https://abc123.ngrok-free.app" width="100%" height="800px" style="border:none;"></iframe>
-</section>
-
+    <h1>Resource Exploration Prospectivity</h1>
     <p>
-      Start your journey in crypto mining with ADA Mining — offering
-      cutting-edge equipment, expert support, and transparent profits.
+      Unveiling the Earth’s hidden wealth through science, innovation, and sustainability.
     </p>
-    <a href="https://abc123.ngrok-free.app" class="btn-primary">Get Started</a>
+    <a href="http://localhost:8501" class="btn-primary">Get Started</a>
   </section>
 
   <section class="about">
     <div class="container content">
-      <img src="/innovanest.jpg" alt="About Image" />
+     <div class="imgab"></div>
       <div class="about-text">
         <h2>About Us</h2>
         <p>
-          $40000 mined in Bitcoin since Sept 1, 2021. 5 current farms running
-          24/7/365. Our infrastructure is designed to deliver consistent
-          results for all investors.
+          Our project on Resource Exploration Prospectivity focuses on identifying and evaluating potential areas rich in natural resources using advanced geological, geochemical, and geophysical data. We aim to develop a systematic approach that integrates modern data analytics, remote sensing, and GIS techniques to improve the accuracy of resource prediction and reduce exploration risk.
+
+
+We explore how different geological parameters — such as lithology, structure, mineralization trends, and geospatial indicators — interact to reveal zones of high prospectivity. Through this project, we demonstrate how technology-driven exploration can guide sustainable resource development and support informed decision-making in the mining and energy sectors.
         </p>
-        <a href="#" class="btn-primary">Learn More</a>
       </div>
     </div>
   </section>
@@ -57,36 +52,32 @@
       <div class="mission-text">
         <h2>Our Mission</h2>
         <p>
-          Our mission is to make crypto mining accessible to everyone. We
-          believe in renewable energy, decentralized technology, and community
-          empowerment. Partner with us and take part in the future of digital
-          wealth.
+          An AI-powered Multi-Modal Exploration Platform is urgently needed to revolutionize mineral exploration by integrating geological maps, geophysical surveys, and satellite imagery, leveraging machine learning to pinpoint mineral-rich target zones with confidence and transparency, while minimizing unnecessary drilling, costs, and environmental impact.
         </p>
-        <a href="#" class="btn-primary">Join Now</a>
       </div>
-      <img src="/Screenshot 2025-10-25 153256.png" alt="Mission Image" />
+      <img src="/WhatsApp Image 2025-10-25 at 15.52.30.jpeg" alt="Mission Image" />
     </div>
   </section>
 
   <section class="facts">
     <div class="container">
-      <h2>Fact & Figures</h2>
+      <h2>Problems & Challenges</h2>
       <div class="fact-grid">
         <div class="fact-item">
-          <h3>133.20</h3>
-          <p>Bitcoin mined daily</p>
+          <h3>Isolated Information</h3>
+          <p>Geological, geophysical, and geochemical data are analyzed in silos, leading to incomplete insights. </p>
         </div>
         <div class="fact-item">
-          <h3>45 MW</h3>
-          <p>Power capacity</p>
+          <h3>Complexity Barrier</h3>
+          <p>Human interpretation struggles to process large, multi-layered datasets.</p>
         </div>
         <div class="fact-item">
-          <h3>1075 PH</h3>
-          <p>Hash rate across farms</p>
+          <h3>Low Success</h3>
+          <p>High drilling costs with low success rates — up to 70% of drilling fails to yield viable mineral deposits.</p>
         </div>
         <div class="fact-item">
-          <h3>280 MS</h3>
-          <p>Low latency performance</p>
+          <h3>Resource Gap</h3>
+          <p>Smaller mining firms lack access to sophisticated AI or integrated data analysis tools.</p>
         </div>
       </div>
     </div>
@@ -99,9 +90,9 @@
         <div class="package silver">
           <h3>Silver</h3>
           <ul>
-            <li>2 Antminer S19 Pro</li>
-            <li>Electric cost included</li>
-            <li>24/7 Support</li>
+            <li>Explore with Intelligence</li>
+            <li>Smarter Exploration,Faster Discovery</li>
+            <li>Validity:6 Months</li>
           </ul>
           <div class="price">$19,999</div>
           <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Get Started</a>
@@ -109,22 +100,22 @@
         <div class="package gold">
           <h3>Gold</h3>
           <ul>
-            <li>5 Antminer S19 Pro</li>
-            <li>Electric cost included</li>
-            <li>Priority maintenance</li>
+            <li>Explore with Intelligence</li>
+            <li>Smarter Exploration,Faster Discovery</li>
+            <li>Validity:12 Months</li>
           </ul>
-          <div class="price">$57,999</div>
+          <div class="price">$34,999</div>
           <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Get Started</a>
         </div>
         <div class="package diamond">
           <h3>Diamond</h3>
           <ul>
-            <li>10 Antminer S19 Pro</li>
-            <li>Electric cost included</li>
-            <li>Dedicated account manager</li>
+            <li>Explore with Intelligence</li>
+            <li>Smarter Exploration,Faster Discovery</li>
+            <li>Validity:18 Months</li>
           </ul>
-          <div class="price">$97,999</div>
-          <a href="/card.html" class="btn-outline">Get Started</a>
+          <div class="price">$49,999</div>
+          <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Get Started</a>
         </div>
       </div>
     </div>
@@ -132,7 +123,7 @@
 
   <section class="contact">
     <div class="container">
-      <h2>Contact Us</h2>
+      <h2>Feedback</h2>
       <form>
         <input type="text" placeholder="Name" required />
         <input type="email" placeholder="Email" required />
@@ -143,9 +134,7 @@
   </section>
 
   <footer>
-    &copy; 2025 ADA Mining. All rights reserved.
+    &copy; 2025 Ore Scout by Innova Nest. All rights reserved.
   </footer>
-  <script src="Js/main.js"></script>
 </body>
-
 </html>
