--- a/proto.html
+++ b/proto.html
@@ -29,7 +29,7 @@
     <p>
       Unveiling the Earth’s hidden wealth through science, innovation, and sustainability.
     </p>
-    <a href="http://localhost:8501" class="btn-primary">Get Started</a>
+    <a href="https://abc123.ngrok-free.app" class="btn-primary">Get Started</a> ye or  <iframe src="https://abc123.ngrok-free.app" width="100%" height="800px" style="border:none;"></iframe>
   </section>
 
   <section class="about">
@@ -138,3 +138,4 @@ We explore how different geological parameters — such as lithology, structure,
   </footer>
 </body>
 </html>
+
