--- a/proto.html
+++ b/proto.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="Style.css" />
   <title>Resource Exploration Prospectivity</title>
 </head>
 <body>
@@ -136,6 +137,8 @@ We explore how different geological parameters — such as lithology, structure,
   <footer>
     &copy; 2025 Ore Scout by Innova Nest. All rights reserved.
   </footer>
+  <script src="/main.js"></script>
 </body>
 </html>
+
 
