--- a/proto.html
+++ b/proto.html
@@ -26,13 +26,16 @@
   </header>
 
   <section class="hero">
-    <h1>Resource Exploration Prospectivity</h1>
-    <p>
-      Unveiling the Earth’s hidden wealth through science, innovation, and sustainability.
-    </p>
-    <a href="https://abc123.ngrok-free.app" class="btn-primary">Get Started</a> ye or  <iframe src="https://abc123.ngrok-free.app" width="100%" height="800px" style="border:none;"></iframe>
-  </section>
+  <h1>Crypto Currency Mining</h1>
+  <iframe src="https://mining-model.onrender.com" width="100%" height="800px" style="border:none;"></iframe>
+</section>
 
+    <p>
+      Start your journey in crypto mining with ADA Mining — offering
+      cutting-edge equipment, expert support, and transparent profits.
+    </p>
+    <a href="https://mining-model.onrender.com" class="btn-primary">Get Started</a>
+  </section>
   <section class="about">
     <div class="container content">
      <div class="imgab"></div>
@@ -140,5 +143,6 @@ We explore how different geological parameters — such as lithology, structure,
   <script src="/main.js"></script>
 </body>
 </html>
+
 
 
