--- a/proto.html
+++ b/proto.html
@@ -26,13 +26,12 @@
   </header>
 
   <section class="hero">
-  <h1>Crypto Currency Mining</h1>
+  <h1>Resource Exploration Prospectivity</h1>
   <iframe src="https://mining-model.onrender.com" width="100%" height="800px" style="border:none;"></iframe>
 </section>
 
     <p>
-      Start your journey in crypto mining with ADA Mining — offering
-      cutting-edge equipment, expert support, and transparent profits.
+      Unveiling the Earth's hidden wealth through science,innovation, and sustainability.
     </p>
     <a href="https://mining-model.onrender.com" class="btn-primary">Get Started</a>
   </section>
@@ -143,6 +142,7 @@ We explore how different geological parameters — such as lithology, structure,
   <script src="/main.js"></script>
 </body>
 </html>
+
 
 
 
