--- a/proto.html
+++ b/proto.html
@@ -118,7 +118,7 @@ We explore how different geological parameters — such as lithology, structure,
             <li>Validity:18 Months</li>
           </ul>
           <div class="price">$49,999</div>
-          <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Get Started</a>
+          <a href="/card.html" class="btn-outline">Get Started</a>
         </div>
       </div>
     </div>
@@ -142,6 +142,7 @@ We explore how different geological parameters — such as lithology, structure,
   <script src="/main.js"></script>
 </body>
 </html>
+
 
 
 
