--- a/public/proto.html
+++ b/public/proto.html
@@ -11,7 +11,7 @@
     <div class="container">
       <nav>
         <div class="logo">
-          <img src="/WhatsApp Image 2025-10-25 at 15.20.38.jpg" alt="Logo" />
+          <img src="/logo1.jpg" alt="Logo" />
           Ore Scout
         </div>
         <ul>
@@ -27,9 +27,6 @@
 
   <section class="hero">
   <h1>Resource Exploration Prospectivity</h1>
-  <iframe src="https://mining-model.onrender.com" width="100%" height="800px" style="border:none;"></iframe>
-</section>
-
     <p>
       Unveiling the Earth's hidden wealth through science,innovation, and sustainability.
     </p>
@@ -37,7 +34,10 @@
   </section>
   <section class="about">
     <div class="container content">
-     <div class="imgab"></div>
+     <div class="imgab">
+                 <img src="/inno1.png" alt="Logo" />
+     </div>
+      
       <div class="about-text">
         <h2>About Us</h2>
         <p>
@@ -54,6 +54,7 @@ We explore how different geological parameters — such as lithology, structure,
     <div class="container content">
       <div class="mission-text">
         <h2>Our Mission</h2>
+        <img src="/Screenshot 2025-10-25 153256.png" alt="Logo" />
         <p>
           An AI-powered Multi-Modal Exploration Platform is urgently needed to revolutionize mineral exploration by integrating geological maps, geophysical surveys, and satellite imagery, leveraging machine learning to pinpoint mineral-rich target zones with confidence and transparency, while minimizing unnecessary drilling, costs, and environmental impact.
         </p>
@@ -142,6 +143,7 @@ We explore how different geological parameters — such as lithology, structure,
   <script src="/main.js"></script>
 </body>
 </html>
+
 
 
 
