--- a/public/proto.html
+++ b/public/proto.html
@@ -99,7 +99,7 @@ We explore how different geological parameters — such as lithology, structure,
             <li>Validity:6 Months</li>
           </ul>
           <div class="price">$19,999</div>
-          <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Get Started</a>
+          <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Buy Now</a>
         </div>
         <div class="package gold">
           <h3>Gold</h3>
@@ -109,7 +109,7 @@ We explore how different geological parameters — such as lithology, structure,
             <li>Validity:12 Months</li>
           </ul>
           <div class="price">$34,999</div>
-          <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Get Started</a>
+          <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Buy Now</a>
         </div>
         <div class="package diamond">
           <h3>Diamond</h3>
@@ -119,7 +119,7 @@ We explore how different geological parameters — such as lithology, structure,
             <li>Validity:18 Months</li>
           </ul>
           <div class="price">$49,999</div>
-          <a href="/card.html" class="btn-outline">Get Started</a>
+          <a href="/card.html" class="btn-outline">Buy Now</a>
         </div>
       </div>
     </div>
@@ -143,6 +143,7 @@ We explore how different geological parameters — such as lithology, structure,
   <script src="/main.js"></script>
 </body>
 </html>
+
 
 
 
