--- a/public/proto.html
+++ b/public/proto.html
@@ -35,7 +35,7 @@
   <section class="about">
     <div class="container content">
      <div class="imgab">
-                 <img src="/inno1.png" alt="Logo" />
+        <img src="/inno1.png" alt="Logo" />
      </div>
       
       <div class="about-text">
@@ -54,12 +54,11 @@ We explore how different geological parameters — such as lithology, structure,
     <div class="container content">
       <div class="mission-text">
         <h2>Our Mission</h2>
-        <img src="/Screenshot 2025-10-25 153256.png" alt="Logo" />
         <p>
           An AI-powered Multi-Modal Exploration Platform is urgently needed to revolutionize mineral exploration by integrating geological maps, geophysical surveys, and satellite imagery, leveraging machine learning to pinpoint mineral-rich target zones with confidence and transparency, while minimizing unnecessary drilling, costs, and environmental impact.
         </p>
       </div>
-      <img src="/WhatsApp Image 2025-10-25 at 15.52.30.jpeg" alt="Mission Image" />
+      <img src="/Screenshot 2025-10-25 153256.png" alt="Mission Image" />
     </div>
   </section>
 
@@ -92,7 +91,7 @@ We explore how different geological parameters — such as lithology, structure,
       <h2>Packages</h2>
       <div class="package-grid">
         <div class="package silver">
-          <h3>Silver</h3>
+          <div class = "text">Silver</div>
           <ul>
             <li>Explore with Intelligence</li>
             <li>Smarter Exploration,Faster Discovery</li>
@@ -102,7 +101,7 @@ We explore how different geological parameters — such as lithology, structure,
           <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Buy Now</a>
         </div>
         <div class="package gold">
-          <h3>Gold</h3>
+          <div id="gold">Gold</div>
           <ul>
             <li>Explore with Intelligence</li>
             <li>Smarter Exploration,Faster Discovery</li>
@@ -112,7 +111,7 @@ We explore how different geological parameters — such as lithology, structure,
           <a href="http://127.0.0.1:5500/card.html" class="btn-outline">Buy Now</a>
         </div>
         <div class="package diamond">
-          <h3>Diamond</h3>
+          <div id="dia">Diamond</div>
           <ul>
             <li>Explore with Intelligence</li>
             <li>Smarter Exploration,Faster Discovery</li>
@@ -143,11 +142,5 @@ We explore how different geological parameters — such as lithology, structure,
   <script src="/main.js"></script>
 </body>
 </html>
-
-
-
-
-
-
 
 
